# gas_difusion_model

./: CMakeLists.txt  README.md  data_with_flags.ipynb  gas_cube.cpp  gas_cube.h  main.cpp  main_cube.cpp  main_cube.h  molecule.cpp  molecule.h  parser.cpp  parser.h  particle.cpp  particle.h  point.cpp  point.h  vector.cpp  vector.h
